--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,18 @@ body {
   background-color: grey;
 }
 
+.new-game {
+  background-color: #312e2e;
+  padding: 10px;
+  font-family: "Press Start 2P", cursive;
+  font-size: 1rem;
+  color: #fef2bf;
+}
+
+.hidden {
+  visibility: hidden;
+}
+
 @media (max-width: 470px) {
   .btn {
     height: 100px;
